Finished the design responsive of the project. Created 3 breakpoints. On mobile devices breakpoints, the close button will stay fixed on the cards and in large devices like notebook, desktops, the close button will appear when the mouse is over the card. Created the event of touch too.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,3 +114,109 @@ main section .form button {
     top: -8px;
     left: -6px;
 }
+
+.close:hover {
+    transform: scale(1.2);
+    border: 2px solid black;
+    transition: all 1.2s;
+
+}
+
+.close:not(:hover) {
+    transform: scale(1.0);
+    transition: all 0.6s
+
+}
+
+@media (max-width: 899px) {
+    .cards li {
+        width: 30%;
+        margin: 10px;
+        padding: 15px;
+        background-color: white
+    }
+}
+
+@media (max-width: 760px) {
+    header .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    main .container {
+        width: 100%;
+    }
+
+    main .form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    
+    main section .form input[type="text"] {
+        height: 80px;
+        width: 80%;
+        padding: 10px;
+        
+    }
+    
+    main section .form button {
+        width: 80%;
+        padding: 10px;
+        height: 40px;
+        margin: 10px 0 0 0;
+    }
+
+    .cards li {
+        width: 80%;
+        margin: 10px auto;
+        padding: 15px;
+    }
+}
+    
+@media (max-width: 480px) {
+    header .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    main .container {
+        width: 100%;
+    }
+
+    main .form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    
+    main section .form input[type="text"] {
+        height: 80px;
+        width: 80%;
+        padding: 10px;
+        
+    }
+    
+    main section .form button {
+        width: 80%;
+        padding: 10px;
+        height: 40px;
+        margin: 10px 0 0 0;
+    }
+
+    .cards li {
+        width: 80%;
+        margin: 10px auto;
+        padding: 15px;
+    }
+
+    .cards .close {
+        display: block;
+    }
+}
